sql and pojo corrections